# sui-sandbox

./: .dockerignore  .env.example  .gitignore  .gitlint  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BUG_REPORT_FIELD_INDEX.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  QUICK_START_GUIDE.md  README.md  REAL_WORLD_TEST_GUIDE.md  RELEASE_LOG.md  REVIEW_REPORT.md  STATUS.md  build.rs  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
benchmark/: .ruff.toml  DATASETS.md  GETTING_STARTED.md  QUICKSTART.md  README.md  TESTING_QUICKSTART.md  llm_sandbox_production.py  pyproject.toml  run_real_world_test.py  smoke_test.sh  test_llm_sandbox_e2e.py  test_llm_self_healing.py
benchmark/docs/: A2A_COMPLIANCE.md  A2A_EXAMPLES.md  ARCHITECTURE.md  DOCUMENTATION_AUDIT.md  FEEDBACK_PIPELINE_AUDIT.md  HARDENING_GUIDE.md  INTEGRATION_TESTING.md  METHODOLOGY.md  TESTING.md
benchmark/fixtures/: phase2_plans_two_packages.json  phase2_two_package_ids.txt
benchmark/manifests/: active_run_manifest.txt
benchmark/manifests/datasets/: docker_test.txt  lst_single.txt  quickstart_top5.txt  single_lst.txt
benchmark/prompts/: README.md  type_inhabitation_v1.txt  type_inhabitation_v2_detailed.txt
benchmark/results/: README.md  mainnet_most_used_mock_empty_example.json
benchmark/scenario_smi/: .scenario_pids.json
benchmark/scripts/: e2e_one_package.py  lint.sh  make_mainnet_most_used_halves.py  manifest_remaining.py  manifest_remaining_from_jsonl.py  phase1_analyze.py  phase1_status.py  phase2_analyze.py  phase2_leaderboard.py  phase2_metrics.py  phase2_status.py  query_benchmark_logs.py  run_model.sh  run_multi_model.sh  run_phase1_manifest_batches.sh  run_phase2_manifest_batches.sh  run_phase2_until_done.sh  tail_events.py  test_doc_examples.py  test_gpt52_artipedia.py  test_gpt52_multi.py  test_multi_model_integration.py  test_otw_creation.py  test_sandbox_agent.py  validate_crossrefs.py  validate_scenario.sh  verify_token_tracking.py
benchmark/scripts/ptb_sim_gpt52/: README.md  test_gpt52_clmm_swap.py  test_gpt52_multi.py
benchmark/src/smi_bench/: __init__.py  __main__.py  a2a_errors.py  a2a_green_agent.py  a2a_middleware.py  a2a_preflight.py  a2a_purple_agent.py  a2a_smoke.py  agentbeats_run_scenario.py  checkpoint.py  cli.py  constants.py  dataset.py  docker_runner.py  doctor.py  env.py  inhabit_manifest.py  inhabit_runner.py  json_extract.py  judge.py  logging.py  manifest_filter.py  openrouter_models.py  runner.py  rust.py  schema.py  utils.py
benchmark/src/sui_move_interface_extractor_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
benchmark/templates/: README.md  repair_build_error.txt  type_inhabitation.txt  type_inhabitation_detailed.txt
benchmark/tests/: README.md  conftest.py  test_a2a_agent_logic.py  test_a2a_cancellation_robustness.py  test_a2a_e2e_workflows.py  test_a2a_enhancements.py  test_a2a_error_types.py  test_a2a_golden_fixtures.py  test_a2a_green_agent.py  test_a2a_hardened_lifecycle.py  test_a2a_http_contract.py  test_a2a_preflight.py  test_a2a_property_based.py  test_a2a_purple_agent.py  test_a2a_streaming_events.py  test_api_endpoints.py  test_checkpoint_compatibility.py  test_cli.py  test_compiler_loop.py  test_config_passthrough.py  test_dataset.py  test_dataset_integration.py  test_doc_steps.py  test_docker_benchmark_script.py  test_docker_e2e.py  test_docker_e2e_one_package_offline.py  test_e2e_one_package.py  test_e2e_security_regression.py  test_env.py  test_evalconfig_comprehensive.py  test_evaluation_bundle_schema.py  test_event_schema.py  test_golden_fixtures.py  test_hardening.py  test_inhabit_dataset_cli.py  test_inhabit_dryrun.py  test_inhabit_evaluation.py  test_inhabit_evaluator.py  test_inhabit_executable_subset.py  test_inhabit_metrics.py  (+30 more)
crates/pyo3-bindings/: Cargo.toml
crates/pyo3-bindings/src/: environment.rs  lib.rs  request.rs  response.rs  types.rs
crates/sui-data-fetcher/: Cargo.toml
crates/sui-data-fetcher/src/: conversion.rs  graphql.rs  lib.rs  utilities.rs
crates/sui-historical-cache/: Cargo.toml
crates/sui-historical-cache/src/: dynamic_fields.rs  index.rs  lib.rs  metrics.rs  objects.rs  package_index.rs  packages.rs  paths.rs  progress.rs  tx_index.rs
crates/sui-napi/: .gitignore  Cargo.toml  package.json
crates/sui-napi/src/: lib.rs  replay_api.rs  replay_core.rs  replay_output.rs  session_api.rs  transport_helpers.rs  workflow_api.rs  workflow_native.rs
crates/sui-package-extractor/: Cargo.toml
crates/sui-package-extractor/src/: bytecode.rs  lib.rs  normalization.rs  types.rs  utils.rs
crates/sui-prefetch/: Cargo.toml
crates/sui-prefetch/src/: conversion.rs  eager_prefetch.rs  lib.rs  utilities.rs
crates/sui-python/: Cargo.toml  README.md  pyproject.toml  sui_sandbox.pyi
crates/sui-python/src/: lib.rs  module_registration.rs  replay_api.rs  replay_core.rs  replay_output.rs  session_api.rs  transport_helpers.rs  workflow_api.rs  workflow_native.rs
crates/sui-sandbox-core/: Cargo.toml
crates/sui-sandbox-core/examples/: gas_accuracy_test.rs
crates/sui-sandbox-core/src/: adapter.rs  bootstrap.rs  bytecode_analyzer.rs  checkpoint_discovery.rs  constructor_map.rs  context_contract.rs  environment_bootstrap.rs  error_context.rs  errors.rs  fetcher.rs  health.rs  historical_view.rs  lib.rs  natives.rs  object_runtime.rs  orchestrator.rs  output.rs  package_builder.rs  predictive_prefetch.rs  ptb.rs  ptb_universe.rs  replay_reporting.rs  replay_support.rs  resolver.rs  sandbox_runtime.rs  sandbox_types.rs  session.rs  simulation.rs  state_layer.rs  state_source.rs  storage_log.rs  sui_object_runtime.rs  tx_hash.rs  tx_replay.rs  types.rs  validator.rs  vm.rs  well_known.rs  workflow.rs  workflow_adapter.rs  (+3 more)
crates/sui-sandbox-integration-tests/: Cargo.toml
crates/sui-sandbox-mcp/: Cargo.toml
crates/sui-state-fetcher/: Cargo.toml
crates/sui-transport/: Cargo.toml
crates/sui-types/: Cargo.toml
(+586 files in other folders)
