[package]
name = "sui_move_interface_extractor"
version = "0.4.0"
edition = "2021"

[workspace]
members = ["crates/pyo3-bindings"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
sha2 = "0.10"
ureq = { version = "2.9", features = ["json"] }
rayon = "1.10"
bcs = "0.1"
smallvec = "1.11"

# Move bytecode parsing - PINNED to mainnet-v1.62.1 to match Docker's sui binary.
# This ensures framework modules loaded at runtime match what `sui move build` produces.
# To update: change the tag below AND update Dockerfile's SUI_VERSION ARG.
# Current: mainnet-v1.62.1 (must match Dockerfile's SUI_VERSION)
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-binary-format" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-core-types" }
move-compiler = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-compiler" }
move-vm-runtime = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-vm-runtime", features = ["tracing"] }
move-vm-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-vm-types" }
move-trace-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-trace-format" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-symbol-pool" }

# Bytecode disassembly for LLM debugging
move-disassembler = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-disassembler" }
move-bytecode-source-map = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-bytecode-source-map" }
move-ir-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-ir-types" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-command-line-common" }

# MM2 (Move Model 2) for static type validation - builds semantic model from bytecode
# Used for Phase 2 (TypeCheck) to validate types without VM execution
move-model-2 = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-model-2" }

# Package building and scaffolding
move-package = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-package" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "sui-move-build" }

# PTB construction helpers
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "sui-transaction-builder" }

# Align with MystenLabs Sui crate requirements.
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros"] }

# Sui SDK crates - PINNED to same version as above for consistency.
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "sui-types" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "sui-json-rpc-types" }

# Native function support for Tier B execution
# move-stdlib-natives provides vector, bcs, hash, string, type_name natives
move-stdlib-natives = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.62.1", package = "move-stdlib-natives" }

# Cryptographic primitives for real native function implementations
# fastcrypto is Mysten Labs' crypto library used by Sui - provides 1:1 compatibility
# Using same git rev as sui-types to ensure compatibility
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }

# VM extension support for dynamic field simulation
# better_any allows non-'static lifetime in extension types
# IMPORTANT: Must match the version used by move-vm-runtime (0.1)
better_any = "0.1"
hex = "0.4.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# gRPC support for real-time transaction streaming
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"

# NOTE: sui-framework bytecode is bundled in framework_bytecode/ instead of using the crate
# This avoids heavy compile times while ensuring version alignment with Dockerfile's SUI_VERSION

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"
