[package]
name = "sui-sandbox"
version = "0.19.0"
edition = "2021"

[workspace]
members = [
    "crates/sui-types",
    "crates/sui-transport",
    "crates/sui-resolver",
    "crates/sui-prefetch",
    "crates/sui-state-fetcher",
    "crates/sui-package-extractor",
    "crates/sui-sandbox-core",
    "crates/sui-historical-cache",
    "crates/sui-sandbox-integration-tests",
    "crates/sui-python",
]

[features]
default = ["walrus", "analysis", "mm2"]
# Forward debug-native logging to the core VM implementation.
debug-natives = ["sui-sandbox-core/debug-natives"]
network-tests = []

# CLI capability flags
analysis = ["mm2"]
mm2 = []
walrus = []
igloo = []

# Centralized dependency versions for the workspace
# Member crates use: dep = { workspace = true }
[workspace.dependencies]
# Logging/tracing
tracing = "0.1"

# Core utilities
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4.3"
bcs = "0.1"
smallvec = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
bincode = "1.3"
prometheus = "0.13"
parking_lot = "0.12"
rayon = "1.10"
rand = "0.8"
better_any = "0.1"

# Async runtime - pinned to match MystenLabs Sui crate requirements
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros", "sync", "process"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP client
ureq = { version = "2.9", features = ["json"] }
clap = { version = "4", features = ["derive"] }

# gRPC - prost matches MystenLabs mainnet-v1.64.2
# Note: tonic stays at 0.12 because 0.14 requires regenerating all proto code
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
prost = "0.13"
prost-types = "0.13"

# Move bytecode parsing - PINNED to mainnet-v1.64.2 to match Docker's sui binary
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-binary-format" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-core-types" }
move-vm-runtime = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-vm-runtime", features = ["tracing"] }
move-vm-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-vm-types" }
move-trace-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-trace-format" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-symbol-pool" }
move-disassembler = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-disassembler" }
move-bytecode-source-map = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-bytecode-source-map" }
move-ir-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-ir-types" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-command-line-common" }
move-model-2 = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-model-2" }
move-stdlib-natives = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-stdlib-natives" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "move-bytecode-utils" }

# Sui SDK and types
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "sui-types" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "sui-json-rpc-types" }
sui-move-natives = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "sui-move-natives-latest" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.64.2", package = "sui-protocol-config" }

# Cryptographic primitives
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }

# Workspace crates
sui-sandbox-types = { path = "crates/sui-types" }
sui-transport = { path = "crates/sui-transport" }
sui-resolver = { path = "crates/sui-resolver" }
sui-prefetch = { path = "crates/sui-prefetch" }
sui-state-fetcher = { path = "crates/sui-state-fetcher" }
sui-package-extractor = { path = "crates/sui-package-extractor" }
sui-sandbox-core = { path = "crates/sui-sandbox-core" }
sui-historical-cache = { path = "crates/sui-historical-cache" }

# Dev/test dependencies
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.0"
dotenv = "0.15"

[dependencies]
# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
base64.workspace = true
bcs.workspace = true
hex.workspace = true
bincode.workspace = true
dirs.workspace = true
chrono.workspace = true
parking_lot.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Move bytecode parsing - versions centralized in [workspace.dependencies]
move-binary-format.workspace = true
move-core-types.workspace = true

# Sui SDK and types
sui-types.workspace = true

# Workspace crates
sui-sandbox-types.workspace = true
sui-transport.workspace = true
sui-resolver.workspace = true
sui-prefetch.workspace = true
sui-state-fetcher.workspace = true
sui-package-extractor.workspace = true
sui-sandbox-core.workspace = true
sui-historical-cache.workspace = true

# NOTE: sui-framework bytecode is bundled in framework_bytecode/ instead of using the crate
# This avoids heavy compile times while ensuring version alignment with Dockerfile's SUI_VERSION

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
dotenv.workspace = true
fastcrypto.workspace = true
move-model-2.workspace = true
move-vm-types.workspace = true

# Examples
[[example]]
name = "ptb_basics"
path = "examples/ptb_basics.rs"

[[example]]
name = "fork_state"
path = "examples/advanced/fork_state.rs"

[[example]]
name = "deepbook_margin_state"
path = "examples/advanced/deepbook_margin_state/main.rs"

[[example]]
name = "deepbook_timeseries"
path = "examples/advanced/deepbook_margin_state/timeseries.rs"

[[example]]
name = "deepbook_json_bcs_only"
path = "examples/advanced/deepbook_margin_state/json_bcs_only.rs"

[[example]]
name = "walrus_ptb_universe"
path = "examples/walrus_ptb_universe.rs"

[[example]]
name = "state_json_offline_replay"
path = "examples/state_json_offline_replay.rs"

# sui-sandbox CLI binary
[[bin]]
name = "sui-sandbox"
path = "src/bin/sui_sandbox.rs"

# Release profile - optimized for small binary size
[profile.release]
# Strip all symbols for smallest binary
strip = true
# Exit process with SIGABRT when any thread panics (smaller binary, no unwinding)
panic = 'abort'

# Release with debug info - for profiling/debugging production issues
[profile.release-debug]
inherits = "release"
# Line tables only for stack traces
debug = 1
# Keep debug info in separate file
split-debuginfo = 'packed'
strip = 'debuginfo'

# Maximum optimization (slower build, smaller/faster binary)
[profile.release-lto]
inherits = "release"
# Enable Link Time Optimization
lto = true
# Single codegen unit for better optimization
codegen-units = 1
