[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sui-sandbox"
version = "0.1.0"
description = "Native Python bindings for Sui Move simulation sandbox"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sui", "move", "blockchain", "simulation", "sandbox"]

[project.urls]
Repository = "https://github.com/your-org/sui-move-interface-extractor"

[tool.maturin]
features = ["extension-module"]
module-name = "sui_sandbox"
manifest-path = "crates/pyo3-bindings/Cargo.toml"
