[project]
name = "sui-move-interface-extractor-benchmark"
version = "0.1.0"
description = "Benchmark harness for sui-move-interface-extractor (key-struct target discovery)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentbeats>=1.2.6",
    "httpx>=0.27.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
docker = [
    "docker>=7.0.0",
]

[project.scripts]
smi-bench = "smi_bench.cli:main"
smi-phase1 = "smi_bench.runner:main"
smi-inhabit = "smi_bench.inhabit_runner:main"
smi-phase2-manifest = "smi_bench.inhabit_manifest:main"
smi-a2a-green = "smi_bench.a2a_green_agent:main"
smi-a2a-purple = "smi_bench.a2a_purple_agent:main"
smi-agentbeats-scenario = "smi_bench.agentbeats_run_scenario:main"
smi-a2a-smoke = "smi_bench.a2a_smoke:main"
smi-a2a-validate-bundle = "smi_bench.a2a_validate_bundle:main"
smi-a2a-preflight = "smi_bench.a2a_preflight:main"
smi-bench-doctor = "smi_bench.doctor:main"
smi-phase2-filter-manifest = "smi_bench.manifest_filter:main"
smi-phase2-targeted-run = "smi_bench.phase2_targeted_run:main"
smi-openrouter-models = "smi_bench.openrouter_models:main"
smi-docker-runner = "smi_bench.docker_runner:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-rerunfailures>=14.0",
    "hypothesis>=6.100.0",
    "ruff>=0.9.0",
    "ty>=0.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "N", "UP", "PL", "RUF",
    "PT",    # flake8-pytest-style
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "ANN",   # flake8-annotations
]
ignore = [
    "PLR0913", "PLR0912", "PLR0915",
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Any is allowed for generic JSON payloads
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The `on_event` decorator is deprecated:DeprecationWarning:starlette.*",
    "ignore:The `route` decorator is deprecated:DeprecationWarning:starlette.*",
    "ignore:HTTP_413_REQUEST_ENTITY_TOO_LARGE is deprecated:DeprecationWarning:a2a.*",
    "ignore:.*is deprecated. Use 'HTTP_413_CONTENT_TOO_LARGE' instead:DeprecationWarning:a2a.*",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]

[tool.uv]
package = true
