[package]
name = "sui-package-extractor"
version = "0.1.0"
edition = "2021"
description = "Package interface extraction for Sui Move packages"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4.3"

# Workspace dependencies
sui-sandbox-types = { path = "../sui-types" }
sui-data-fetcher = { path = "../sui-data-fetcher" }

# Move bytecode parsing
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.63.4", package = "move-binary-format" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.63.4", package = "move-core-types" }

# Sui SDK for SuiClient (RPC calls)
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.63.4", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.63.4", package = "sui-types" }

# Async runtime
tokio = { version = "=1.47.1", features = ["rt-multi-thread", "macros"] }
