[package]
name = "sui-package-extractor"
version = "0.1.0"
edition = "2021"
description = "Package interface extraction for Sui Move packages"

[dependencies]
# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true

# Async runtime
tokio.workspace = true

# Move bytecode parsing
move-binary-format.workspace = true
move-core-types.workspace = true

# Sui SDK
sui-sdk.workspace = true
sui-types.workspace = true

# Workspace crates
sui-sandbox-types.workspace = true
sui-transport.workspace = true
