[package]
name = "sui-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Sui Move package analysis and transaction replay"

[lib]
name = "sui_move_extractor"
crate-type = ["cdylib"]

[features]
default = ["walrus"]
walrus = []
mm2 = []

[dependencies]
# PyO3 bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
dirs.workspace = true

# Move bytecode parsing
move-binary-format.workspace = true
move-core-types.workspace = true

# Sui types (for CheckpointData, TransactionKind, etc.)
sui-types.workspace = true

# Workspace crates
sui-package-extractor.workspace = true
sui-transport.workspace = true
sui-state-fetcher.workspace = true
sui-sandbox-core.workspace = true
sui-sandbox-types.workspace = true
