[package]
name = "sui-python"
version = "0.18.0"
edition = "2021"
description = "Python bindings for Sui Move package analysis and transaction replay"

[lib]
name = "sui_sandbox"
crate-type = ["cdylib"]

[features]
default = ["walrus"]
walrus = []
mm2 = []

[dependencies]
# PyO3 bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Core utilities
anyhow.workspace = true
serde_json.workspace = true
base64.workspace = true
dirs.workspace = true

# Move bytecode parsing
move-binary-format.workspace = true
move-core-types.workspace = true

# Sui types (for CheckpointData, TransactionDataAPI)
sui-types.workspace = true

# Async runtime (for replay state fetching)
tokio.workspace = true

# Workspace crates
sui-package-extractor.workspace = true
sui-transport.workspace = true
sui-sandbox-core.workspace = true
sui-sandbox-types.workspace = true
sui-state-fetcher.workspace = true
