[package]
name = "sui-sandbox-core"
version = "0.1.0"
edition = "2021"
description = "Move VM simulation engine for Sui transactions"

[features]
default = []
debug-natives = []  # Enable verbose debug output for native function tracing

[dependencies]
# Logging/tracing
tracing.workspace = true

# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
bcs.workspace = true
smallvec.workspace = true
hex.workspace = true
prometheus.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
rayon.workspace = true
rand.workspace = true
better_any.workspace = true
parking_lot.workspace = true

# Move VM dependencies
move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-vm-types.workspace = true
move-trace-format.workspace = true
move-symbol-pool.workspace = true
move-model-2.workspace = true
move-disassembler.workspace = true
move-bytecode-source-map.workspace = true
move-ir-types.workspace = true
move-command-line-common.workspace = true
move-bytecode-utils.workspace = true

# Native function support
move-stdlib-natives.workspace = true
sui-move-natives.workspace = true

# Sui types and protocol config
sui-types.workspace = true
sui-protocol-config.workspace = true

# Cryptographic primitives
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Workspace crates
sui-sandbox-types.workspace = true
sui-transport.workspace = true
sui-resolver.workspace = true
sui-prefetch.workspace = true

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
tempfile.workspace = true
