[package]
name = "sui-sandbox-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
network-tests = []

[dependencies]
sui-sandbox-core = { path = "../sui-sandbox-core" }

[dev-dependencies]
sui-sandbox = { path = "../..", package = "sui-sandbox" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile.workspace = true
move-core-types.workspace = true
