[package]
name = "sui-sandbox-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
dirs.workspace = true
chrono.workspace = true
base64.workspace = true
hex.workspace = true
bcs.workspace = true
parking_lot.workspace = true
bincode.workspace = true

sui-sandbox-core.workspace = true
sui-sandbox-types.workspace = true
sui-prefetch.workspace = true
sui-resolver.workspace = true
sui-state-fetcher.workspace = true
sui-transport.workspace = true
sui-types.workspace = true
move-core-types.workspace = true
move-binary-format.workspace = true

rmcp = { version = "0.8", features = ["server", "transport-io"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "sui_sandbox_mcp"
path = "src/lib.rs"

[[bin]]
name = "sui-sandbox-mcp"
path = "src/main.rs"

[[example]]
name = "perp_dex_example"
path = "examples/perp_dex_example.rs"
