[package]
name = "sui-transport"
version = "0.1.0"
edition = "2021"
description = "Network transport layer for Sui (gRPC + GraphQL)"

[dependencies]
# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
ureq.workspace = true
chrono.workspace = true
hex.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Sui types
move-core-types.workspace = true
sui-types.workspace = true
sui-protocol-config.workspace = true
sui-storage.workspace = true
bcs.workspace = true
