[package]
name = "sui-sandbox-types"
version = "0.1.0"
edition = "2021"
description = "Shared types for sui-sandbox workspace"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
anyhow.workspace = true
sui-resolver.workspace = true

# Move types for AccountAddress
move-core-types.workspace = true
